# resume

./: .gitignore  CHANGELOG.md  Main.hs  Makefile  README.md  Resume.hs  Str.hs  Tex.hs  details-ccpp.yaml  details-haskell.yaml  details-webdev.yaml  details.yaml  flake.nix  requirements.txt  res.cls  resume-template.tex  resume.cabal  resume.tex  template.tex  upload.py
.github/workflows/: main.yml
resume/: Main.hs  Resume.hs  Tex.hs  resume.cabal
resume/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
resume/tex/: resume.tex
