cabal-version:      2.4
name:               resume
version:            0.1.0.0
author:             Ailrk
maintainer:         jimmy123good@hotmail.com
extra-source-files: CHANGELOG.md

executable resume
    main-is:          Main.hs
    other-modules:
      Tex
      Resume
    build-depends:
        base ^>=4.14.1.0
      , text
      , filepath
    hs-source-dirs:   .
    default-language: Haskell2010
